Visit Planning/src/objects/Visit_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Check_In_Date_Time__c</fullName>
        <label>Check In Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_In_Location__c</fullName>
        <label>Check In Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Check_Out_Comments__c</fullName>
        <label>Check Out Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Check_Out_Date_Time__c</fullName>
        <label>Check Out Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Check_Out_Location__c</fullName>
        <label>Check Out Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Reason_For_Visit__c</fullName>
        <label>Reason For Visit</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(
	AND	(
			ISBLANK(Check_In_Date_Time__c),
			ISBLANK(Check_Out_Date_Time__c),
                        Visit_Date__c &gt;= TODAY()

	),
	&apos;Planned&apos;,
	IF	(
			AND	(
					NOT(ISBLANK(Check_In_Date_Time__c)),
					ISBLANK(Check_Out_Date_Time__c)
			),
			&apos;Checked In&apos;,
			
			IF(
				AND(
							NOT(ISBLANK(Check_In_Date_Time__c)),
							NOT(ISBLANK(Check_Out_Date_Time__c))
				),
				&apos;Checked Out&apos;,
					
				IF(
					AND(
						ISBLANK(Check_In_Date_Time__c),
						ISBLANK(Check_Out_Date_Time__c),
						Visit_Date__c &lt;= TODAY()
					),
					&apos;Missed&apos;,
&apos;&apos;					
					
				)
			)
	
	)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Other_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Other Visit</label>
        <referenceTo>Test_Other_Visit__c</referenceTo>
        <relationshipLabel>Visit Plans</relationshipLabel>
        <relationshipName>Visit_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visit Plans</relationshipLabel>
        <relationshipName>Visit_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_To_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visit Plans</relationshipLabel>
        <relationshipName>Visit_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_To_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit To Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Visit Plans</relationshipLabel>
        <relationshipName>Visit_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Visit Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Visit_Date__c</columns>
        <columns>Visit_To_Account__c</columns>
        <columns>Visit_To_Lead__c</columns>
        <columns>Visit_To_Contact__c</columns>
        <columns>Reason_For_Visit__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Planed_Visit</fullName>
        <columns>NAME</columns>
        <columns>Visit_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Visit_To_Lead__c</columns>
        <columns>Visit_To_Contact__c</columns>
        <columns>Visit_To_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </filters>
        <label>All Planned Visit Plans</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Visit_Plans</fullName>
        <columns>NAME</columns>
        <columns>Visit_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Visit_To_Lead__c</columns>
        <columns>Visit_To_Contact__c</columns>
        <columns>Visit_To_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Visit Plans</label>
    </listViews>
    <nameField>
        <displayFormat>VP-{00000000}</displayFormat>
        <label>Visit Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>